--- a/addons/localization_editor_plugin_g3/plugin.cfg
+++ b/addons/localization_editor_plugin_g3/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="Localization Editor"
-description="Tool for Localization Management in .csv files."
-author="Danny Garay (@dannygaray60)"
-version="1.3"
+name="Godot Localization Editor"
+description="Tool for managing Godot localization files."
+author="Ethan Grahn"
+version="1.0"
 script="plugin.gd"
